// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToastNotification> matches snapshot for error type 1`] = `
<div>
  <div
    class="toast-notification css-1h9cqgs-notificationStyles-notificationStyles-notificationStyles-notificationStyles"
  >
    <div
      class="toast-notification__icon-container"
    >
      <span
        class="toast-notification__icon"
      >
        <svg-file-stub
          height="16"
        />
      </span>
      <p
        class="toast-notification__text css-mzb2zy-textContainer-textContainer"
        data-testid="text-component"
      >
        An error occurred
      </p>
    </div>
    <button
      aria-label="Close toast notification"
      class="toast-notification__close-btn linkButton css-iz7gwz-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="close-toast-notification"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          height="32"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`<ToastNotification> matches snapshot for info type 1`] = `
<div>
  <div
    class="toast-notification css-19m6z3b-notificationStyles-notificationStyles-notificationStyles-notificationStyles"
  >
    <div
      class="toast-notification__icon-container"
    >
      <span
        class="toast-notification__icon"
      >
        <svg-file-stub
          height="16"
        />
      </span>
      <p
        class="toast-notification__text css-mzb2zy-textContainer-textContainer"
        data-testid="text-component"
      >
        This is an info message
      </p>
    </div>
    <button
      aria-label="Close toast notification"
      class="toast-notification__close-btn linkButton css-iz7gwz-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="close-toast-notification"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          height="32"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`<ToastNotification> matches snapshot for success type 1`] = `
<div>
  <div
    class="toast-notification css-gyra7j-notificationStyles-notificationStyles-notificationStyles-notificationStyles"
  >
    <div
      class="toast-notification__icon-container"
    >
      <span
        class="toast-notification__icon"
      >
        <svg-file-stub
          height="16"
        />
      </span>
      <p
        class="toast-notification__text css-mzb2zy-textContainer-textContainer"
        data-testid="text-component"
      >
        Operation completed successfully
      </p>
    </div>
    <button
      aria-label="Close toast notification"
      class="toast-notification__close-btn linkButton css-iz7gwz-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="close-toast-notification"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          height="32"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`<ToastNotification> matches snapshot for warning type 1`] = `
<div>
  <div
    class="toast-notification css-1w93cmu-notificationStyles-notificationStyles-notificationStyles-notificationStyles"
  >
    <div
      class="toast-notification__icon-container"
    >
      <span
        class="toast-notification__icon"
      >
        <svg-file-stub
          height="16"
        />
      </span>
      <p
        class="toast-notification__text css-mzb2zy-textContainer-textContainer"
        data-testid="text-component"
      >
        Please be careful with this action
      </p>
    </div>
    <button
      aria-label="Close toast notification"
      class="toast-notification__close-btn linkButton css-iz7gwz-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="close-toast-notification"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          height="32"
        />
      </span>
    </button>
  </div>
</div>
`;
